added args dependency to pom

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,9 @@
 						<compilerArg>
 							-Amapstruct.defaultComponentModel=spring
 						</compilerArg>
+						<compilerArg>
+							-parameters
+						</compilerArg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
